feat: full review system, mobile overflow fix, Ollama AI migration
- Add complete review system to public storefront product detail screen
- Fix Android review dialog not appearing (showDialog → showModalBottomSheet)
- Fix review card action button overflow (Row → Wrap) for 360px screens
- Migrate AI from OpenAI/Claude to Ollama with qwen3:8b fallback
- Add Flyway V29 (ai_conversations) + V30 (reviews) with IF NOT EXISTS
- Fix pending review count always showing 0 (key mismatch)
- Remove dead merchant_ai_chat_widget.dart and ai_assistant_service.dart
- Various UI overflow fixes across 12+ screens
- Mobile dart:html removal with conditional web exports